# iced_navigation

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
derive/: Cargo.toml  README.md
derive/src/: lib.rs
examples/: bottom_tabs.rs  bottom_tabs_base.rs  bottom_tabs_derive.rs  drawer.rs  drawer_base.rs  drawer_sliding.rs  nested_navigators.rs  stack_customization.rs  stack_customization_derive.rs  stack_login.rs  stack_login_base.rs  stack_login_derive.rs
src/: animation.rs  components.rs  drawer_navigator.rs  lib.rs  stack_navigation.rs  stack_navigatior.rs  stack_navigator.rs  tabs_navigator.rs
src/base/: drawer_navigator.rs  mod.rs  operations.rs  stack_navigator.rs  tabs_navigator.rs
src/components/: drawer.rs  header.rs  pages_container.rs  stack_page_wrapper.rs  tabs.rs
src/widgets/: drawer_navigator.rs  operations.rs  stack_navigator.rs  tabs_navigator.rs
