[package]
name = "iced_navigation"
version = "1.4.0"
edition = "2024"
description = "Navigation library for the iced GUI framework"
homepage = "https://github.com/danielmbomfim/iced_navigation"
repository = "https://github.com/danielmbomfim/iced_navigation"
keywords = ["gui", "iced", "navigation"]
categories = ["gui"]
readme = "README.md"
authors = ["Daniel M. Bomfim"]
license = "MIT"

[dependencies]
iced = { version = "0.14.0", features = ["advanced"] }
iced_font_awesome = "0.4.1"
iced_navigation_derive = { path = "./derive", version = "0.1.1", optional = true }
indexmap = "2.11.4"

[features]
tabs = []
stack = []
drawer = []
derive = ["iced_navigation_derive"]
default = ["derive", "stack"]


[workspace]
members = [".", "derive"]
