[package]
name = "iced_navigation"
version = "1.4.0"
edition = "2024"
description = "Navigation library for the iced GUI framework"
homepage = "https://github.com/danielmbomfim/iced_navigation"
repository = "https://github.com/danielmbomfim/iced_navigation"
keywords = ["gui", "iced", "navigation"]
categories = ["gui"]
readme = "README.md"
authors = ["Daniel M. Bomfim"]
license = "MIT"

[dependencies]
iced = { version = "0.14.0", features = ["advanced"] }
indexmap = "2.11.4"

[dev-dependencies]
iced_font_awesome = "0.4.1"

[features]
tabs = []
stack = []
drawer = []
default = ["stack"]

[[example]]
name = "stack_login"
required-features = ["stack"]

[[example]]
name = "bottom_tabs"
required-features = ["tabs"]

[[example]]
name = "drawer"
required-features = ["drawer"]

[[example]]
name = "nested_navigators"
required-features = ["stack", "tabs"]
