[package]
name = "iced_navigation_derive"
version = "0.1.0"
description = "macros for iced_navigation"
edition = "2021"
homepage = "https://github.com/danielmbomfim/iced_navigation"
repository = "https://github.com/danielmbomfim/iced_navigation"
keywords = ["gui", "iced", "navigation"]
categories = ["gui"]
readme = "README.md"
authors = ["Daniel M. Bomfim"]
license = "MIT"

[lib]
name = "iced_navigation_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro-crate = "1"
proc-macro2 = "1"
proc-quote = "0.4"
syn = { version = "1", features = ["full", "parsing"] }
