[package]
name = "iced_navigation_derive"
version = "0.1.1"
description = "macros for iced_navigation"
edition = "2021"
homepage = "https://github.com/danielmbomfim/iced_navigation"
repository = "https://github.com/danielmbomfim/iced_navigation"
keywords = ["gui", "iced", "navigation"]
categories = ["gui"]
readme = "README.md"
authors = ["Daniel M. Bomfim"]
license = "MIT"

[lib]
name = "iced_navigation_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro-crate = "3.3.0"
proc-macro2 = "1.0.94"
proc-quote = "0.4"
syn = { version = "2.0.99", features = ["full", "parsing"] }
